--- a/src/views/Index/index.module.scss
+++ b/src/views/Index/index.module.scss
@@ -8,6 +8,9 @@
     top: 200px;
     width: 300px;
     margin: auto;
+    @media screen and (max-width: 700px) {
+      top: 150px;
+    }
   }
   .tip {
     span:nth-child(2) {
