--- a/src/views/Todo/index.module.scss
+++ b/src/views/Todo/index.module.scss
@@ -26,7 +26,9 @@
 
 .queryBar {
   display: flex;
-  margin-bottom: 50px;
+  max-width: 300px;
+  margin: 0 auto;
+  margin-bottom: 30px;
 
   input {
     width: 300px;
